syntax = "proto3";

package post;

enum PostType{
    FOODPOST = 0;
    SELLPOST = 1;
    AMUSEMENTPOST = 2;
}

message Post {
    int32 id = 1;
    string title = 2;
    int32 user_id = 3;
    string content = 4;
    int32 likes = 6;
    int32 favorates = 7;
    int64 created_at = 9;
    optional int64 updated_at = 10;
    repeated Comment comments = 8; // MANAGED BY FOREIGN KEYS
    repeated bytes images = 5; // MANAGED BY FOREIGN KEYS
    PostType post_type = 11;
}

message Comment {
    int32 id = 1;
    int32 post_id = 2;
    int32 user_id = 3;
    string content = 4;
    int32 likes = 5;
    int64 created_at = 6;
    optional int64 updated_at = 7;
}